--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -5,7 +5,7 @@ html, #root, body {
 
 body {
   background: linear-gradient(to top, #ffe8ec 60%, #fff5f5);
-  font-family: Jost, Roboto, sans-serif, bold;
+  font-family: Jost, sans-serif;
   font-size: small;
 }
 
@@ -42,7 +42,7 @@ body {
   align-items: center;
   text-align: center;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 700;
   color: #8f5861;
 }
 
@@ -110,7 +110,7 @@ a {
 
 input,
 button {
-  font-family: Jost, Roboto, sans-serif, bold;
+  font-family: Jost, sans-serif;
   border-radius: 8px;
   border: 1px solid #a2737b;
   margin-right: 4px;
@@ -149,7 +149,7 @@ button:hover {
 
 @media (max-width: 600px) {
   body {
-    font-family: Roboto, sans-serif, bold;
+    font-family: Jost, sans-serif;
   }
 
   .mainContainer {
