--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -42,7 +42,7 @@ body {
   align-items: center;
   text-align: center;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: bold 700;
   color: #8f5861;
 }
 
