--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -86,6 +86,7 @@ body {
   border-radius: 100%;
   border: 2px solid #a2737b;
   box-shadow: 0 0 40px 20px #ffffff30;
+  margin: 12px;
 }
 
 .nav {
@@ -98,7 +99,7 @@ body {
 
 h2 {
   margin: 0;
-  margin-top: 4px;
+  margin: 16px;
   margin-right: 20px;
   color: #8f5861;
 }
@@ -120,7 +121,7 @@ button {
   box-sizing: border-box;
 }
 
-#sizeInput {
+input {
   width: 48px;
 }
 
@@ -164,6 +165,7 @@ button:hover {
 
   h2 {
     margin-right: 0;
+    margin-left:  0;
   }
 
   .nav {
@@ -206,6 +208,5 @@ button:hover {
   #mainImage {
     width: 320px;
     height: 320px;
-    margin: 12px;
   }
 }
