--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -33,6 +33,7 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   height: 800px;
+  max-height: 80vh;
   width: 240px;
   border-top: 2px solid #a2737b;
   border-bottom: 2px solid #a2737b;
@@ -82,6 +83,8 @@ body {
 #mainImage {
   width: 800px;
   height: 800px;
+  max-height: 80vh;
+  max-width: 80vh;
   background-color: #ffffff70;
   border-radius: 100%;
   border: 2px solid #a2737b;
@@ -99,7 +102,7 @@ body {
 
 h2 {
   margin: 0;
-  margin: 16px;
+  margin: 12px;
   margin-right: 20px;
   color: #8f5861;
 }
