--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -170,6 +170,10 @@ button:hover {
     margin-right: 0;
   }
 
+  #downloadButton {
+    display: none;
+  }
+
   h2 {
     margin-right: 0;
     margin-left:  0;
@@ -206,10 +210,12 @@ button:hover {
     overflow: auto;
     overflow-y: hidden;
     padding: 4px;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 
   .mandala-thumbnail {
-    height: 80px;
+    height: 20vw;
   }
 
   #mainImage {
